change Pixelegg template to no longer depend on jdots

--- a/print.css
+++ b/print.css
@@ -9,7 +9,7 @@
  * @version $Id$
  */
 
-/*@import url("../api/templates/default/print.css");*/
+/*@import url("/api/templates/default/print.css");*/
 
 /**
  * Changes for jDots
